[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windborne"
version = "1.2.6"
description = "A Python library for interacting with WindBorne Data and Forecasts API"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "WindBorne Systems", email = "data@windbornesystems.com"}
]
requires-python = ">=3.6"
dependencies = [
    "requests",
    "PyJWT",
    "numpy",
    "xarray",
    "pandas",
    "netCDF4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.scripts]
windborne = "windborne.cli:main"

[tool.setuptools]
packages = ["windborne"]
